Task 17: draft both talks, demo runbook, claims ledger, final README, verify.sh
Compile 16 prior batches of evidence into the study's final deliverables:
docs/talk-1-hybrid-api.md and docs/talk-2-llm-inference.md (opening,
narrative, live-coding sequence, technical explanation, conclusion, per
PLAN.md's definition of done), docs/demo-runbook.md (exact live sequence,
what to say, per-step fallback), docs/claims.md (every claim mapped to its
evidence classification and source), and a rewritten README.md with a
numbered demo table, java @arg-file commands, and a measured-results table
citing actual Nsight Systems/wall-clock numbers with tool/GPU context.

Add scripts/verify.sh to validate the deliverable set and every cited
results/ path without requiring a GPU.

Re-ran the entire Talk 1/Talk 2 demo sequence fresh as a final rehearsal
(results/raw/17-final-rehearsal/) to confirm the runbook as written still
reproduces; every number landed within the ranges already recorded in
prior batches.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>